--- a/airbitz/airbitz/static/less/business-info.less
+++ b/airbitz/airbitz/static/less/business-info.less
@@ -5,14 +5,14 @@
     .biz-name {
         letter-spacing: -1.5px;
         font-size: 42px;
-        font-weight: 300;
+        font-weight: 900;
     }
 
-    .admin-edit {
+    .social-share {
         position: absolute;
         right: 15px;
         top: 25px;
-        z-index: 9999;
+        z-index: 1;
     }
 }
 
