--- a/airbitz/airbitz/static/less/navbar.less
+++ b/airbitz/airbitz/static/less/navbar.less
@@ -2,6 +2,14 @@
 // Customize Navbar
 // --------------------------------------------------
 
+.navbar-admin {
+
+    .btn {
+        position: relative;
+        top: 10px;
+        margin: 0 15px;
+    }
+}
 
 .navbar-ab {
     background-color: white;
