--- a/airbitz/airbitz/static/less/results-grid.less
+++ b/airbitz/airbitz/static/less/results-grid.less
@@ -8,11 +8,12 @@
     }
 }
 
-.results-grid {
+.results-area {
 
     .search-title {
         margin-top: 0;
         margin-bottom: 20px;
+        font-weight: 900;
     }
 }
 
