--- a/airbitz/airbitz/static/less/results-map-list.less
+++ b/airbitz/airbitz/static/less/results-map-list.less
@@ -122,7 +122,8 @@
     }
 
     .biz-name {
-        font-weight: 300;
+        font-size: 24px;
+        font-weight: 900;
         letter-spacing: -1.25px;
         margin: 0;
 
